# surfer-mcp

./: .gitignore  CLAUDE.md  README-simvision-wcp.md  README-simvision.md  README.md  pyproject.toml
docs/: SIMVISION-MENU-HANG.md
src/simvision_mcp/: __init__.py  client.py  raster.py  server.py
src/simvision_wcp/: __init__.py  client.py  server.py
src/surfer_mcp/: server.py  wcp.py
tests/: conftest.py  test_quoters.py  test_rasterize.py  test_sessions.py  test_simvision_live.py  test_tools_e2e.py  test_wcp_event_hooks.py  test_wcp_server.py  test_wcp_via_surfer_client.py
tests/data/: tiny.vcd
